cleaned up <hypervelocity#99365>

--- a/wiki/hypervelocity.wikitext
+++ b/wiki/hypervelocity.wikitext
@@ -1,4 +1,7 @@
+== English ==
+=== Etymology ===
+{{E.}} '''''[[hyper-]]''''' + '''''[[velocity]]'''''
 
-<b>Hypervelocity</b> is usually refered to a very high [[velocity]], such as over 10,000 [[foot (unit)|feet]] per [[second]].
-
-{{Physics-stub}}
+=== Noun ===
+'''hypervelocity'''
+#a very high [[velocity]]
