robot  Adding:et <orientation#84373>

--- a/wiki/orientation.wikitext
+++ b/wiki/orientation.wikitext
@@ -11,4 +11,5 @@
 #(''mathematics'') on a [[real]] [[vector space]], a [[choice]] of which [[order]]ed [[base]]s are "[[positively]]" oriented and which are "[[negatively]]" oriented
 [[Category:English nouns]]
 
+[[et:Orientation]]
 [[pl:Orientation]]
