robot  Adding:et <organisation#74450>

--- a/wiki/organisation.wikitext
+++ b/wiki/organisation.wikitext
@@ -19,7 +19,8 @@
 *[[organisational]]
 *[[organise]]
 
-[[de:Organisation]]
-[[pl:Organisation]]
-
 [[Category:1000 English basic words]]
+
+[[de:Organisation]]
+[[et:Organisation]]
+[[pl:Organisation]]
