robot  Adding:fr,de <ama#97031>

--- a/wiki/ama.wikitext
+++ b/wiki/ama.wikitext
@@ -4,3 +4,6 @@
 
 # ''third-person singular indicative present of [[amare]]''
 # ''second-person singular imperative of amare''
+
+[[de:ama]]
+[[fr:ama]]
