robot  Adding:gl <ambassador#41246>

--- a/wiki/ambassador.wikitext
+++ b/wiki/ambassador.wikitext
@@ -11,5 +11,5 @@ IPA: [[WEAE]] /æmˈbæs.ə.dɚ/ or /-ˌdɔɹ/
 # An official messenger and representative.
 <!-- material copied from Webster's Revised Unabridged Dictionary (1913) -->
 
-
+[[gl:Ambassador]]
 [[it:ambassador]]
