robot  Adding:it <origano#98964>

--- a/wiki/origano.wikitext
+++ b/wiki/origano.wikitext
@@ -3,3 +3,5 @@
 '''origano''' ''m''  (''countable'' as a plant, ''uncountable'' as a flavouring)
 # [[oregano]]
 [[category:Italian nouns]]
+
+[[it:origano]]
