robot  Adding:hu <Országház#97760>

--- a/wiki/Orsz%C3%A1gh%C3%A1z.wikitext
+++ b/wiki/Orsz%C3%A1gh%C3%A1z.wikitext
@@ -9,3 +9,5 @@ From Hungarian words ''[[ország]]'' ([[country]]) and ''[[ház]]'' ([[house]])
 *[http://www.parlament.hu/ the Hungarian parliament's website]
 
 [[Category:Hungarian institute names]]
+
+[[hu:országház]]
