robot  Adding:et,gl <ambition#41248>

--- a/wiki/ambition.wikitext
+++ b/wiki/ambition.wikitext
@@ -48,5 +48,7 @@ And falls on the other.&rdquo;
 ====Related terms====
 *[[ambitious]]
 
+[[et:Ambition]]
+[[gl:Ambition]]
 [[it:ambition]]
 [[pl:Ambition]]
