add English entry <labium#40227>

--- a/wiki/labium.wikitext
+++ b/wiki/labium.wikitext
@@ -1,3 +1,15 @@
+==English==
+===Noun===
+'''labium'''  (plural ''[[labia]]'')
+# any of the four [[lip]]-shaped folds of the [[female]] [[vulva]]
+# any similarly shaped [[anatomical]]  or [[botanical]] [[structure]]
+===Related terms===
+*[[labia minora]]
+*[[labia majora]]
+*[[labiate]]
+*[[labial]]
+----
+
 ==Latin==
 ===Alternate Spellings===
 *[[labia]] ''f''
