robot  Adding:it <amenity#89514>

--- a/wiki/amenity.wikitext
+++ b/wiki/amenity.wikitext
@@ -11,3 +11,5 @@ French ''[[aménité]]'', Latin ''[[amoenitas]]'', from ''[[amoenus]]'', "pleasa
 ====Translations====
 *German: [[Annehmlichkeit]] ''f'' (1,2)
 *Indonesian: [[kenyamanan]]
+
+[[it:amenity]]
