--- a/wiki/pervert.wikitext
+++ b/wiki/pervert.wikitext
@@ -8,6 +8,9 @@
 ====Synonyms====
 *[[deviant]], [[perv]]
 
+===Translations===
+*Chinese: [[堕落者]] (duò luò zhě)
+
 ====See Also====
 *[[perverse]]
 *[[perversion]]
