changed to my version <labium#40227>

--- a/wiki/labium.wikitext
+++ b/wiki/labium.wikitext
@@ -1,13 +1,13 @@
-==English==
-===Noun===
-'''labium'''  (plural ''[[labia]]'')
-# any of the four [[lip]]-shaped folds of the [[female]] [[vulva]]
-# any similarly shaped [[anatomical]]  or [[botanical]] [[structure]]
-===Related terms===
-*[[labia minora]]
-*[[labia majora]]
-*[[labiate]]
-*[[labial]]
+== English ==
+=== Etymology ===
+From {{L.}} '''''labium'''''
+
+=== Pronunciation ===
+*{{AHD|lā'bē-əm}}
+
+=== Noun ===
+'''labium''' (plural: '''labia''')
+#any of the four folds of the female [[vulva]].
 ----
 
 ==Latin==
