overhaul, +defs, +etyms <corporal#39069>

--- a/wiki/corporal.wikitext
+++ b/wiki/corporal.wikitext
@@ -1,23 +1,31 @@
-Corporal
+== English ==
+=== Pronunciations ===
+*{{SAMPA}} /"kO:r.p3`.@5/ ''or'' /"kO:r.pr@5/
 
-==Adjective==
+=== Etymology 1 ===
+From the Latin ''[[corporalis]]'' from ''[[corpus]]'' "body"
 
-1.  Something having a physical body that can be touched. 
+==== Adjective ====
+'''corporal'''
+# (''archaic'') having a physical, [[tangible]] body (''[[corporeal]]'')
+# of or pertainting to the physical body (''coporal punishment'')
 
-==Origins==
-
-Note: the term corporal and [[corporeal]] have related meanings, but very different usage and connotation. For example corporal punishment, literally punishment of the body, refers to physical acts of spanking, flogging, whipping, or even capital punishment. One could not interchangeably say "corporeal punishment."
-
-==Examples==
-
-1.  The sailor had committed a crime, and was subjected to the corporal punishment of 30 lashes.
-
-2.  The teacher's corporeal self was tied to the ground by gravity but his soul was free to float with the orchestra's sweet melody.
-==Noun==
-1.  A [[noncommissioned officer]] in military land forces and police ranking below a sergeant but above a [[private]] or [[patrolman]].
-
-====Translations====
+===== Translations =====
 *German adj. (?) n. [[gefreiter]]
 *Greek adj. [[σωματικός]] n. [[δεκανεύς]]/[[δεκανεάς]]
 *Latin adj. corporalis n. decurion
 [[pl:Corporal]]
+
+=== Etymology 2 ===
+Corrupted from the French ''[[caporal]]'', from the Italian ''[[caporale]]'', from ''[[capo]]'' "head, leader" from the Latin ''[[caput]]'' "head"
+
+==== Noun ====
+'''corporal'''
+# a [[noncommissioned]] [[officer]] rank in the [[military]] and [[police]] force, below a [[sergeant]] but above a [[private]] or [[patrolman]]
+
+=== Etymology 3 ===
+From the Latin ''[[corporale]]'', the neuter of ''[[corporalis]]'' representing the doctrine of [[transubstantiation]] in which the [[eucharist]] becomes the body of Christ.
+
+==== Noun ====
+'''corporal'''
+# the white [[linen]] [[cloth]] on which the [[elements]] of the [[eucharist]] are placed
