/* Japanese [[Romaji]] */ <he#5747>

--- a/wiki/he.wikitext
+++ b/wiki/he.wikitext
@@ -119,7 +119,7 @@ Usually can't be omitted, despite the verb showing also the person and number.
 [[Category:Finnish pronouns]]
 ----
 
-==Japanese [[Romaji]]==
+==Japanese [[romaji]]==
 '''he''' ([[へ]])
 
 ===Noun===
