other pronunciation in AHD <corporal#39069>

--- a/wiki/corporal.wikitext
+++ b/wiki/corporal.wikitext
@@ -1,7 +1,7 @@
 == English ==
 === Pronunciations ===
 *{{SAMPA}} /"kO:r.p3`.@5/ ''or'' /"kO:r.pr@5/
-*{{AHD|/kôr'pər-əl/}}
+*{{AHD|/kôr'pər-əl/ ''or'' /kôr'prəl/}}
 
 === Etymology 1 ===
 From the Latin ''[[corporalis]]'' from ''[[corpus]]'' "body"
