--- a/wiki/mischief.wikitext
+++ b/wiki/mischief.wikitext
@@ -18,6 +18,7 @@ From Old French, meschef, from mes- + chef, head.
 *(''annoying conduct''): [[bad manners]], [[badness]], [[delinquincy]], [[devilishness]], [[devilment]], [[devilry]], [[deviltry]], [[disobedience]], [[elfishness]], [[goings-on]], [[hanky-panky]], [[impishness]], [[impropriety]], [[misbehavior]], [[mischievousness]], [[misconduct]], [[misdemeanor]], [[monkey business]], [[naughtiness]], [[prankishness]], [[pranksomeness]], [[puckishness]], [[rascality]], [[roguery]], [[roguishness]], [[scampishness]]
 
 ====Translations====
+*Chinese: [[淘气]] (táo qì)
 *French: [[sottise]]
 *German: [[Mischief]]
 *Spanish: [[travesura]]
