--- a/wiki/misdemeanor.wikitext
+++ b/wiki/misdemeanor.wikitext
@@ -4,4 +4,5 @@
 '''misdemeanor'''
 #A [[crime]] usually punishable upon [[conviction]] by a small [[fine]] or by a short term of [[imprisonment]].  Crimes which are punishable by large fines or by longer imprisonment are usually called [[felony|felonies]].
 ====Translations====
+*Chinese: [[轻罪]] (qīng zùi)
 *German: [[Vergehen]] ''n'' (1)
