--- a/wiki/%E5%88%87%E8%85%B9.wikitext
+++ b/wiki/%E5%88%87%E8%85%B9.wikitext
@@ -2,9 +2,9 @@
 === Noun ===
 '''[[切]][[腹]]''' ([[せっぷく]], [[seppuku]])
 
-# [[Ritualized]] self-[[disembowelment]]; ritualized [[suicide]]; [[harakiri]]; [[seppuku]]
+# [[Ritualized]] self-[[disembowelment]]; ritualized [[suicide]]; [[harakiri]]; [[hari-kari]]; [[seppuku]]
 
 === See also ===
-* [[腹切り]] ([[はらきり]], [[harakiri]]
+* [[腹切り]] ([[はらきり]], [[harakiri]])
 
 [[de:切腹]]
