YOU HAVE BEEN TROLLED.  Pumpie must've been joking, when destroying this article.  I'll restore translations from history. <biweekly#38167>

--- a/wiki/biweekly.wikitext
+++ b/wiki/biweekly.wikitext
@@ -1,4 +1,5 @@
 ==English==
+
 === Pronunciations ===
 *{{SAMPA}} /baI.wik.li/
 *{{IPAlink}} {{IPA|/baɪ.'wik.li/}}
@@ -9,26 +10,17 @@
 
 === Adjective ===
 '''biweekly'''
-# occuring twice a week
 # occuring once every two weeks
 
 ===Adverb===
 '''biweekly'''
 # every two weeks
-# [[twice]] a [[week]]
 
-==== Synonyms ====
-* (2) [[semiweekly]]
+==== See also ====
+* [[semiweekly]]
 *(''British'') (1) [[fortnightly]] 
-
-====Usage note====
-Because of the ambiguity of this word, it is best to avoid it.  Instead, use ''twice a week'', ''every two weeks'' or ''fortnightly'' as appropriate.
 
 === Noun ===
 '''biweekly''' ''pl.'' '''biweeklies'''
 # that which is published or released once every two weeks
 #: ''The local paper is a [[biweekly]].''
-
-====Translations====
-*French: [[deux]] [[fois]] par [[semaine]] (1), [[tous]] les deux semaines (2), tous les [[quinze]] [[jour]]s (2)
-*Italian: [[due]] [[volte]] alla [[settimana]] (1), [[tutte]] le due settimane (2)
