added another definition <eh#65684>

--- a/wiki/eh.wikitext
+++ b/wiki/eh.wikitext
@@ -1,5 +1,5 @@
 ==English==
-
+{{wikipedia}}
 ===Pronunciation===
 *[[w:AHD|AHD]]: /ā/
 *[[w:IPA|IPA]]: /eɪ/
@@ -11,6 +11,7 @@
 <!--other definitions?-->
 #:''So what time shall we meet, eh?''
 #:''These hot dogs are really good, eh?''
+#used to mean "[[What]]?"
 
 ===={{usage}}====
 This is a predominantly [[Canadian]] term; using it outside of [[Canada]] often conveys that you are trying to sound (sarcastically) Canadian, or even French-Canadian.
