robot  Adding:pl <amplification#98280>

--- a/wiki/amplification.wikitext
+++ b/wiki/amplification.wikitext
@@ -5,3 +5,5 @@
 #{{physics}} the act, or result of [[independently]] [[increasing]] some quantity, especially [[voltage]], [[power]] or [[current]]
 #{{electronics}} [[gain]]
 [[category:English nouns]]
+
+[[pl:Amplification]]
