robot  Adding:gl <ample#41334>

--- a/wiki/ample.wikitext
+++ b/wiki/ample.wikitext
@@ -17,4 +17,5 @@ IPA: [[WEAE]] /ˈæm.pl/
 <!-- material copied from Webster's Revised Unabridged Dictionary (1913) -->
 
 [[fr:ample]]
+[[gl:Ample]]
 [[pl:Ample]]
