robot  Adding:gl <amphibious#54177>

--- a/wiki/amphibious.wikitext
+++ b/wiki/amphibious.wikitext
@@ -20,3 +20,5 @@
 *Korean: [[수륙 양용]]<!-- please check this one -->
 *Russian: [[земноводный]] ''m'', [[земноводная]] ''f'', [[земноводное]] ''n''
 *Spanish: [[anfibio]] ''m'', [[anfibia]] ''f''
+
+[[gl:Amphibious]]
