--- a/wiki/face.wikitext
+++ b/wiki/face.wikitext
@@ -124,7 +124,7 @@ The translations below need to be checked by native speakers and inserted into t
 *Arabic: [[وجه]]
 *[[Basque]]: [[aurpegi]], [[begitarte]], [[imintzio]]
 *[[Cebuano]]: [[nawung]]
-*Chinese: [[脸]] (lian), [[面孔]] (miankong)
+*Chinese: [[脸]] (liǎn), [[面孔]] (miǎn kǒng)
 *Danish: [[ansigt]]
 *Dutch: [[gezicht]] ''n'', [[aangezicht]] ''n''
 *Estonian: [[nägu]] (1)
