robot  Adding:nl <anaconda#38721>

--- a/wiki/anaconda.wikitext
+++ b/wiki/anaconda.wikitext
@@ -71,7 +71,8 @@ anacondas '''plural'''
 *Yiddish:
 *Zulu:
 
+[[Category:Sinhalese derivations]]
+
+[[nl:anaconda]]
 [[pl:Anaconda]]
 [[pt:Anaconda]]
-
-[[Category:Sinhalese derivations]]
