--- a/wiki/%E9%80%A3.wikitext
+++ b/wiki/%E9%80%A3.wikitext
@@ -24,7 +24,7 @@
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': làn (lan4), lián (lian2), liǎn (lian3), liàn (lian4)
+*** '''[[Pinyin]]''': lián (lian2), làn (lan4), liǎn (lian3), liàn (lian4)
 *** '''[[Wade-Giles]]''': lan<sup>4</sup>, lien<sup>2</sup>, lien<sup>3</sup>, lien<sup>4</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
