--- a/wiki/woman.wikitext
+++ b/wiki/woman.wikitext
@@ -53,6 +53,7 @@ From [[Old English]] [[wíf]] (adult female, [[Modern English]] [[wife]]) and [[
 *Korean: [[여자]] (yeoja) / [[여성]] (yeosung)
 *Latin: [[femina]] ''f'', [[mulier]] ''f''
 *Lithuanian: [[moteris]] ''f''
+*[[Malayalam]]: [[sthree]], [[wanitha]]
 *Manx: [[ben#Manx|ben]] ''f''
 *Norwegian: [[kvinne]]
 *[[Persian]]: [[زَن]] (zæn)
