robot  Adding:fr <anatomy#41355>

--- a/wiki/anatomy.wikitext
+++ b/wiki/anatomy.wikitext
@@ -21,5 +21,7 @@ plural '''anatomies'''
 ==Translations==
 
 *[[Persian]]: [[كالبدشناسی]] (kalbod-shenasi)
-[[gl:anatomy]]
+
+[[fr:anatomy]]
+[[gl:Anatomy]]
 [[it:anatomy]]
