robot  Adding:sv,gl <anecdote#38883>

--- a/wiki/anecdote.wikitext
+++ b/wiki/anecdote.wikitext
@@ -3,5 +3,7 @@ A short account of a humorous incident.
 
 [[Category:Greek derivations]]
 
+[[gl:Anecdote]]
 [[it:anecdote]]
 [[nl:anecdote]]
+[[sv:anecdote]]
