robot  Adding:fi <Andorra#2294>

--- a/wiki/Andorra.wikitext
+++ b/wiki/Andorra.wikitext
@@ -61,5 +61,6 @@ Official name: [[Principality of Andorra]].
 [[hu:Andorra]]
 [[nl:Andorra]]
 [[pl:Andorra]]
+[[fi:Andorra]]
 [[sv:Andorra]]
 [[tr:Andorra]]
