--- a/wiki/biweekly.wikitext
+++ b/wiki/biweekly.wikitext
@@ -10,12 +10,12 @@
 === Adjective ===
 '''biweekly'''
 # occuring twice a week
-# occuring once every two weeks
+# (''slang'') occuring once every two weeks
 
 ===Adverb===
 '''biweekly'''
 # every two weeks
-# [[twice]] a [[week]]
+# (''slang'') [[twice]] a [[week]]
 
 ==== Synonyms ====
 * (2) [[semiweekly]]
