--- a/wiki/biweekly.wikitext
+++ b/wiki/biweekly.wikitext
@@ -10,12 +10,12 @@
 === Adjective ===
 '''biweekly'''
 # occuring twice a week
-# (''slang'') occuring once every two weeks
+# occuring once every two weeks
 
 ===Adverb===
 '''biweekly'''
 # every two weeks
-# (''slang'') [[twice]] a [[week]]
+# [[twice]] a [[week]]
 
 ==== Synonyms ====
 * (2) [[semiweekly]]
