--- a/wiki/semi-weekly.wikitext
+++ b/wiki/semi-weekly.wikitext
@@ -1,70 +1,11 @@
 ==English==
-===Pronunciation===
-'''Se*mi-week*ly'''
-*[[AHD]]: //
-*[[IPA]]: //
-*[[SAMPA]]: //
-SEH-mee-WEEK-lee
 
 ===Etymology===
-
 [[semi]] + [[week]] + -ly
+
 ===Noun===
-#Occurring once every two [[week]]s
-===Synomyms===
+'''semi-weekly''' or '''semiweekly'''
+# Occurring once every one-half a [[week]]; occurring twice a week.
+
+===Antonyms===
 *[[biweekly]]
-====Translations====
-*Arabic:
-*Basque:
-*Belorussian:
-*Breton:
-*Bulgarian:
-*Catalan:
-*Czech:
-*Danish:
-*Dutch:
-*Esperanto:
-*Estonian:
-*Finnish:
-*French:
-*Frisian:
-*German:
-*Greek:
-*Gujarati:
-*Hebrew:
-*Hindi:
-*Hungarian:
-*Interlingua:
-*Irish:
-*Italian:
-*Japanese:
-*Korean:
-*Kurdish:
-*Latin:
-*Latvian:
-*Lithuanian:
-*Malaysian:
-*Mandarin:
-*Marathi:
-*Nepalese:
-*Norwegian:
-*Occitan:
-*Polish:
-*Portuguese:
-*Romanian:
-*Sardinian:
-*Scottish:
-*Slovakian:
-*Slovene:
-*Spanish:
-*Swahili:
-*Swedish:
-*Taiwanese:
-*Thai:
-*Ukrainian:
-*Urdu:
-*Vietnamese:
-*Waloon:
-*Welsh:
-*Yiddish:
-*Zulu:
