robot  Adding:gl <anger#41667>

--- a/wiki/anger.wikitext
+++ b/wiki/anger.wikitext
@@ -23,6 +23,8 @@ IPA: [[WEAE]] /ˈæŋ.ɚ/
 
 [[Category:Emotions]]
 
+[[Category:Old Norse derivations]]
+
+[[gl:Anger]]
 [[it:anger]]
 [[la:Anger]]
-[[Category:Old Norse derivations]]
