robot  Adding:fr,gl <angel#5792>

--- a/wiki/angel.wikitext
+++ b/wiki/angel.wikitext
@@ -82,5 +82,7 @@ From {{enm}}, from {{ang}} '''[[engel]]''', or {{fro}} '''[[angele]]''', both fr
 
 [[Category:Greek derivations]]
 
+[[fr:Angel]]
+[[gl:Angel]]
 [[it:angel]]
 [[nl:angel]]
