robot  Adding:gl,it <angina#91547>

--- a/wiki/angina.wikitext
+++ b/wiki/angina.wikitext
@@ -3,3 +3,6 @@
 '''angina'''
 # An inflammatory infection of the throat, such as quinsy.
 # ''(Erroneously)'': [[angina pectoris]].
+
+[[gl:Angina]]
+[[it:angina]]
