robot  Adding:gl <anguish#41752>

--- a/wiki/anguish.wikitext
+++ b/wiki/anguish.wikitext
@@ -30,4 +30,5 @@ Sir Arthur Conan Doyle in ''The Hound of the Baskervilles''
 
 <!-- some material copied from Webster's Revised Unabridged Dictionary (1913) -->
 
+[[gl:Anguish]]
 [[it:anguish]]
