Don't revert during conversation please.  While posting cleanup comment, rfc removed? <biweekly#38167>

--- a/wiki/biweekly.wikitext
+++ b/wiki/biweekly.wikitext
@@ -1,4 +1,7 @@
 ==English==
+
+{{rfc}}
+
 === Pronunciations ===
 *{{SAMPA}} /baI.wik.li/
 *{{IPAlink}} {{IPA|/baɪ.'wik.li/}}
@@ -9,26 +12,28 @@
 
 === Adjective ===
 '''biweekly'''
-# occuring twice a week
 # occuring once every two weeks
+# ''(see usage note):'' occuring twice a week
 
 ===Adverb===
 '''biweekly'''
 # every two weeks
-# [[twice]] a [[week]]
+# ''(see usage note):'' [[twice]] a [[week]]
 
-==== Synonyms ====
-* (2) [[semiweekly]]
-*(''British'') (1) [[fortnightly]] 
+==== See also ====
+*[[semiweekly]]
+*[[fortnightly]] ''(UK)''
 
 ====Usage note====
-Because of the ambiguity of this word, it is best to avoid it.  Instead, use ''twice a week'', ''every two weeks'' or ''fortnightly'' as appropriate.
+The prefix '''[[bi-]]''' applies to the ''week'', not to activites around a week.  Miss-using the term to mean an activity performed twice in one week is etymologically incorrect and certain to cause confusion.  Because of the confusion of the ''twice-in-one-week'' meaning, the second meaning should be avoided.  Also for this reason, the term [[semiweekly]] could conceivably be listed here as both a synonym and an antonym.
 
 === Noun ===
 '''biweekly''' ''pl.'' '''biweeklies'''
 # that which is published or released once every two weeks
 #: ''The local paper is a [[biweekly]].''
 
-====Translations====
+----
+
+===Translations to be checked===
 *French: [[deux]] [[fois]] par [[semaine]] (1), [[tous]] les deux semaines (2), tous les [[quinze]] [[jour]]s (2)
 *Italian: [[due]] [[volte]] alla [[settimana]] (1), [[tutte]] le due settimane (2)
