--- a/wiki/%D1%89%D0%B5%D0%BD%D0%BE%D0%BA.wikitext
+++ b/wiki/%D1%89%D0%B5%D0%BD%D0%BE%D0%BA.wikitext
@@ -1,7 +1,7 @@
 ==Russian==
 [[Category:Russian nouns]]
 ===Noun===
-'''щенок''' (ščenók) ''m'', щенки (ščenkí) ''pl'', щенята (ščenjáta) ''pl''
+'''щенок''' (shchenók) ''m'', щенки (shchenkí) ''pl'', щенята (shchenyáta) ''pl''
 
 # [[puppy]]
 #''(wild animals)'' [[cub]], [[whelp]]
