robot  Adding:hu <own#33886>

--- a/wiki/own.wikitext
+++ b/wiki/own.wikitext
@@ -32,5 +32,7 @@
 
 ====Translations====
 *Swedish: [[egen]] ''c'', [[eget]] ''n'', [[egna]] ''pl''
-[[fi:Own]]
 [[Category:200 English basic words]]
+
+[[hu:own]]
+[[fi:Own]]
