robot  Adding:zh <owl#8195>

--- a/wiki/owl.wikitext
+++ b/wiki/owl.wikitext
@@ -115,3 +115,5 @@
 '''Owl'''
 
 #A [[fictional]] [[character]] in [[w:A. A. Milne|A. A. Milne]]'s book ''[[w:Winnie the Pooh|Winnie the Pooh]]'' and the [[w:Disney|Disney]] film of the same name.
+
+[[zh:Owl]]
