robot  Adding:gl <anniversary#51993>

--- a/wiki/anniversary.wikitext
+++ b/wiki/anniversary.wikitext
@@ -33,4 +33,5 @@ From the Latin adjective ''[[anniversarius]]'', "returning yearly", from ''[[ver
 *[[wedding anniversary]]
 *[[birthday]]
 
+[[gl:Anniversary]]
 [[it:anniversary]]
