robot  Adding:gl <anise#59951>

--- a/wiki/anise.wikitext
+++ b/wiki/anise.wikitext
@@ -5,3 +5,5 @@
 '''anise'''
 
 #An umbelliferous plant (Pimpinella anisum) growing naturally in Egypt, and cultivated in Spain, Malta, etc., for its carminative and aromatic seeds.
+
+[[gl:Anise]]
