robot  Adding:gl <anoint#41773>

--- a/wiki/anoint.wikitext
+++ b/wiki/anoint.wikitext
@@ -16,3 +16,5 @@ IPA: [[WEAE]] /ʌˈnɔɪnt/
 ===Related Terms===
 '''The Lord's Anointed''', Christ or the Messiah; also, a Jewish or other king by "divine right." --1 Sam. xxvi. 9.
 <!-- material copied from Webster's Revised Unabridged Dictionary (1913) -->
+
+[[gl:Anoint]]
