--- a/wiki/annoyance.wikitext
+++ b/wiki/annoyance.wikitext
@@ -11,4 +11,5 @@ IPA: [[WEAE]] /ʌˈnɔɪ.əns/
 # The psychological state of being irritated or [[annoy]]ed.
 <!-- some material copied from Webster's Revised Unabridged Dictionary (1913) -->
 
+[[gl:Annoyance]]
 [[it:annoyance]]
