robot  Adding:gl <annoy#41276>

--- a/wiki/annoy.wikitext
+++ b/wiki/annoy.wikitext
@@ -27,5 +27,6 @@
 *'''Russian''': [[надоедать]] (nadoedat'), [[надоесть]] (nadoest')
 *'''Spanish''': [[molestar]]
 
+[[gl:Annoy]]
 [[it:annoy]]
 [[ru:Annoy]]
