robot  Adding:gl <announce#41763>

--- a/wiki/announce.wikitext
+++ b/wiki/announce.wikitext
@@ -21,4 +21,5 @@ To [[proclaim]]; [[publish]]; make known; [[herald]]; [[declare]]; [[promulgate]
 
 [[Category:Communication]]
 
+[[gl:Announce]]
 [[it:announce]]
