+audio...did I do this right?? <admit#40658>

--- a/wiki/admit.wikitext
+++ b/wiki/admit.wikitext
@@ -4,6 +4,7 @@ OE. [[amitten]], L. [[admittere]], [[admissum]]; ad + [[mittere]] to send: cf. F
 
 ===Pronunciation===
 IPA: [[WEAE]] /ædˈmɪt/
+*{{audio|en-us-admit.ogg|Audio pronunciation}}
 
 ===Transitive Verb===
 # To suffer to enter; to grant entrance, whether into a place, or into the mind, or consideration; to receive; to take; as, they were into his house; to admit a serious  thought into the mind; to admit evidence in the trial of a cause.
