--- a/wiki/biweekly.wikitext
+++ b/wiki/biweekly.wikitext
@@ -12,13 +12,13 @@
 
 === Adjective ===
 '''biweekly'''
-# occuring once every two weeks
-# ''(see usage note):'' occuring twice a week
+# occuring once every two [[week]]s
+# ''(see usage note, etymologically incorrect):'' occuring twice a week
 
 ===Adverb===
 '''biweekly'''
 # every two weeks
-# ''(see usage note):'' [[twice]] a [[week]]
+# ''(see usage note, etymologically incorrect):'' twice a week
 
 ==== See also ====
 *[[semiweekly]]
@@ -35,5 +35,5 @@ The prefix '''[[bi-]]''' applies to the ''week'', not to activites around a week
 ----
 
 ===Translations to be checked===
-*French: [[deux]] [[fois]] par [[semaine]] (1), [[tous]] les deux semaines (2), tous les [[quinze]] [[jour]]s (2)
-*Italian: [[due]] [[volte]] alla [[settimana]] (1), [[tutte]] le due settimane (2)
+*French: [[deux]] [[fois]] par [[semaine]] (?), [[tous]] les deux semaines (?), tous les [[quinze]] [[jour]]s (?)
+*Italian: [[due]] [[volte]] alla [[settimana]] (?), [[tutte]] le due settimane (?)
