--- a/wiki/troubleshoot.wikitext
+++ b/wiki/troubleshoot.wikitext
@@ -4,7 +4,7 @@
 
 === Verb ===
 '''to troubleshoot'''
-#to analyze a problem to the point of determining a solution.
+#to analyze or diagnose a problem to the point of determining a solution.
 
 ==== Synonyms ====
 *[[debug]]
