--- a/wiki/pluck.wikitext
+++ b/wiki/pluck.wikitext
@@ -1,6 +1,18 @@
-==verb==
-#(Music): To gently play a single guitar string
-#To remove feathers from a bird
+===Transitive verb===
+#to [[pull]] something [[sharp]]ly; to pull something out
+#:''She '''plucked''' the phone from her bag and phoned her friend.''
+#{{music}}: To gently play a single [[string]], e.g. on a [[guitar]], [[violin]], etc. 
+#:''Whereas a [[piano]] stikes the string, a [[harpsichord]] '''plucks''' it.''
+#To [[remove]] [[feather]]s from a [[bird]]
+
+===Noun===
+#(uncountable) [[nerve]], [[fortitude]], or [[persistence]]
+#:''He didn't get far with the attempt, but you have to admire his '''pluck'''.''
+
 ====Translations====
+{{checktrans}}
 *French: [[pincer]]
 *Slovensko: [[ubirati]] (glasba/music), [[skubsti]]
+
+===See also===
+*[[pizzicato]]
