/* English */ Added see also <HYPS#99404>

--- a/wiki/HYPS.wikitext
+++ b/wiki/HYPS.wikitext
@@ -6,6 +6,7 @@
 #:*2005:"Right now, only 10% of the students accepted by both Williams and '''HYPS''', choose Williams." &mdash; [http://www.ephblog.com/archives/001781.html]
 #:*2005:"Rankings do actually mean quite a bit. Make sure you know what kind of rankings you are looking at. The most accepted college rankings are those by U.S. News. You also need to seperate private universities from public, bachelors from LAC's, Ivy's from '''HYPS''', ad nauseam." &mdash; [http://www.physicsforums.com/archive/t-40877_Best_undergrad_school?.html]
 === See also ===
+* [[Oxbridge]]
 * [[HYP]]
 * [[HYPSM]]
 * [[HYPSMC]]
