--- a/wiki/fundamentalism.wikitext
+++ b/wiki/fundamentalism.wikitext
@@ -3,7 +3,7 @@
 ===Noun===
 '''fundamentalism'''
 
-# The tendency to reduce a religion to its most fundamental tenets, based on strict interpretation of core texts.
+# (''religion'') The tendency to reduce a religion to its most fundamental tenets, based on strict interpretation of core texts.
 # (''finance'') The belief that fundamental financial quantities are the best predictor of the price of an instrument.
 
 ====Translations====
