--- a/wiki/words.wikitext
+++ b/wiki/words.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Noun===
 '''words''' 
-Plural of [[word]]
-====Translations====
+#plural of [[word]]
+===Translations===
 *French: [[mots]]
