--- a/wiki/words.wikitext
+++ b/wiki/words.wikitext
@@ -2,5 +2,6 @@
 ===Noun===
 '''words''' 
 #plural of [[word]]
+#:''Words have a longer life than deeds.'' &ndash; Pindar, Greek poet
 ===Translations===
 *French: [[mots]]
