--- a/wiki/zyzzyva.wikitext
+++ b/wiki/zyzzyva.wikitext
@@ -1,8 +1,7 @@
-=={{en}}==
+==English==
+{{wikipedia}}
 [[Category:English nouns]]
 ===Noun===
 '''zyzzyva'''
 
 #a tropical American [[weevil]] of the genus ''Zyzzyva''.
-===See Also===
-[[w:zyzzyva|Wikipedia article on the Zyzzva]]
