--- a/wiki/copyvio.wikitext
+++ b/wiki/copyvio.wikitext
@@ -1,3 +1,3 @@
 '''copyvio''' (pronounced ''cop - pee - vy - oh'', [[IPA]]: ɒɨʋoʊ) is defined as:
 
-* ''n.'' a [[Wikipedia]] term short for '''[[Copyright]] [[violation''', that is, when one breaks the copyright laws of a country. ''That [[plagarized]] article was nominated as'' copyvio'' by Wikipedia.''
+* ''n.'' a [[Wikipedia]] term short for '''[[Copyright]] [[violation]]''', that is, when one breaks the copyright laws of a country. ''That [[plagarized]] article was nominated as'' copyvio'' by Wikipedia.''
