--- a/wiki/combine.wikitext
+++ b/wiki/combine.wikitext
@@ -6,7 +6,7 @@
 ====Verb====
 '''combine''' ([[combines]], [[combined]], [[combining]])
 
-#{{substub}}
+#(verb)to bring together, to form a [[union]] with
 
 =====Derived terms=====
 *[[combination]]
