--- a/wiki/combine.wikitext
+++ b/wiki/combine.wikitext
@@ -21,9 +21,6 @@
 ====Noun====
 '''combine'''  (''plural:'' [[combines]])
 
-# short for ''combine harvester''
-
-=====Synonyms=====
-*[[combine harvester]]
+# short for ''[[combine harvester]]''
 
 [[it:combine]]
