--- a/wiki/arrest.wikitext
+++ b/wiki/arrest.wikitext
@@ -3,6 +3,9 @@
 ===Noun===
 '''arrest'''  (''plural:'' [[arrests]])
 # an act or instance of an arrest
+====Phrases====
+*[[arrest warrant]]
+*[[house arrest]]
 
 ===Verb===
 '''to arrest'''  ([[arrests]], [[arrested]], [[arresting]])
