some fmt. Needs pronunciation attention.  Does this have a verb sense, too? <copyvio#99413>

--- a/wiki/copyvio.wikitext
+++ b/wiki/copyvio.wikitext
@@ -1,3 +1,13 @@
-'''copyvio''' (pronounced ''cop - pee - vy - oh'', [[IPA]]: ɒɨʋoʊ) is defined as:
+==English==
+===Pronunciation===
+*''cop - pee - vy - oh''
+*[[IPA]]: ɒɨʋoʊ)
 
-* ''n.'' a [[Wikipedia]] term short for '''[[Copyright]] [[violation]]''', that is, when one breaks the copyright laws of a country. ''That [[plagarized]] article was nominated as'' copyvio'' by Wikipedia.''
+===Etymology===
+a [[Wikimedia]] term short for '''[[copyright]] [[violation]]'''
+
+===Noun===
+'''copyvio'''  
+# (countable) a violation of copyright laws
+# a work which is in violation of copyright laws
+#:''That [[plagarized]] article was nominated as'' copyvio'' by Wikipedia.''
