--- a/wiki/demonstrate.wikitext
+++ b/wiki/demonstrate.wikitext
@@ -19,6 +19,7 @@ From [[Latin]] '''[[demonstrare]]''', ''show completely'', from prefix '''[[de-]
 
 ====Translations====
 *{{sv}}: [[demonstrera]] (1,2)
+*{{es}}: [[demostrar]] 
 
 [[Category:English verbs]]
 [[it:demonstrate]]
