/* Translations */  Added Low Saxon <cattle#8215>

--- a/wiki/cattle.wikitext
+++ b/wiki/cattle.wikitext
@@ -48,6 +48,7 @@
 *Latin: [[Bos taurus primigenius]]
 *Latvian: [[liellopigovs]]
 *Lithuanian: [[galvijai]] ''m, pl'', [[pekus]] ''m'' (archaic, means herd of cattle)
+*[[Low Saxon]]: [[Rindveeh]]
 *[[Lower Sorbian]]: [[gowjedo]]
 *Macedonian: [[говедо]] ([[govedo]])
 *Maltese: [[bhejjem]]
