--- a/wiki/cattle.wikitext
+++ b/wiki/cattle.wikitext
@@ -15,6 +15,7 @@
 
 ==== Translations ====
 *Albanian: [[kau i egër]]
+*Alemannic: [[kuh]]
 *[[Basque]]: [[behi-azienda]]
 *Belarusian: [[карова]]
 *[[Breton]]: [[chatal]] ''pl'' [[penn-chatal]] ''singulier m''
@@ -22,7 +23,7 @@
 *[[Catalan]]: [[boví]]
 *Chinese: [[牛]] (niú)
 *Croatian: [[govedo]]
-*Czech: [[skot]]
+*Czech: [[skot]], [[tur domácí]]
 *Danish: [[tamkvæg]]
 *Dutch: [[rund]] ''n''
 *[[Ekspreso]]: [[vakon]]
@@ -36,6 +37,7 @@
 *[[Gallegan]]: [[boi]]
 *{{de}}: [[Rind]] ''n''
 *Greek: [[βόδι]] (taurus)
+*[[Hebrew]]: [[בקר]]
 *Hungarian: [[szarvasmarha]]
 *Icelandic: [[kýr]], [[naut]]
 *Indonesian: [[sapi]]
@@ -48,7 +50,7 @@
 *Latin: [[Bos taurus primigenius]]
 *Latvian: [[liellopigovs]]
 *Lithuanian: [[galvijai]] ''m, pl'', [[pekus]] ''m'' (archaic, means herd of cattle)
-*[[Low Saxon]]: [[Rindveeh]]
+*[[Low Saxon]]: [[rindveeh]]
 *[[Lower Sorbian]]: [[gowjedo]]
 *Macedonian: [[говедо]] ([[govedo]])
 *Maltese: [[bhejjem]]
@@ -59,7 +61,7 @@
 *Romanian: [[vite]]
 *[[Romansh]]: [[bov]]
 *[[Romany]]: [[gurumnya]] ''f''
-*Russian: [[скот]] (skot) ''m''
+*Russian: [[скот]] (skot) ''m'', [[коро́ва]] (koróva)
 *[[Sami]]: [[burru]], [[vuoksá; gussa (cow)]]
 *[[Sardinian]]: [[bulu]], [[óinu]], [[bàcchinu]], [[bóinu]], [[bacca]]
 *[[Scottish]]: [[crodh]]
@@ -72,7 +74,7 @@
 *Ukrainian: [[корова]], [[худоба]] (korova, hudoba)
 *[[Upper Sorbian]]: [[howjado]]
 *[[Volapük]]: [[kun]]
-*Welsh: [[gwartheg]]  ''pl''
+*Welsh: [[gwartheg]] ''pl'', [[buwch]]
 
 ====Related terms====
 *[[cattleman]]
