--- a/wiki/cattle.wikitext
+++ b/wiki/cattle.wikitext
@@ -54,7 +54,7 @@
 *[[Lower Sorbian]]: [[gowjedo]]
 *Macedonian: [[говедо]] ([[govedo]])
 *Maltese: [[bhejjem]]
-*Norwegian: [[kveg]], [[oksedyr]]
+*Norwegian: [[kveg]], [[oksedyr]], [[storfe]]
 *[[Occitan]]: [[vaca]]
 *Polish: [[bydło]] ''n ''
 *Portuguese: [[bovino]]
