--- a/wiki/house_arrest.wikitext
+++ b/wiki/house_arrest.wikitext
@@ -20,3 +20,6 @@
 *[[Portuguese]]: [[apreensão da casa]]
 *[[Russian]]: [[арестование дома]] (arestovaniye doma)
 *[[Spanish]]: [[detención de la casa]]
+
+===Verb===
+#''Justice and law.'' To confine a person to his or her home for breaking the law, especially as a lenient alternative to incarceration.
