/* Translations */ add Spanish, use {{top}}{{mid}}{{bottom}} layout templates <chemist#88801>

--- a/wiki/chemist.wikitext
+++ b/wiki/chemist.wikitext
@@ -15,22 +15,13 @@ kem'ĭst, /ˈkɛmɪst/, /'kEmIst/
 
 ====Translations====
 '''person working in chemistry'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from A to I here-->
+{{top}}
 *French: [[chimiste]] ''m and f''
 *Italian: [[chimico]] ''m''
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from J to Z here-->
-*{{sv}}: [[kemist]] ''c''
-|}
-|}
-
+{{mid}}
+*Spanish: [[químico]] (a)
+*Swedish: [[kemist]] ''c''
+{{bottom}}
 '''pharmacist'''
 ''See'' '''pharmacist'''
 
@@ -38,5 +29,4 @@ kem'ĭst, /ˈkɛmɪst/, /'kEmIst/
 ''See'' '''pharmacy'''
 
 [[Category:English nouns]]
-
 [[it:chemist]]
