--- a/wiki/chemist.wikitext
+++ b/wiki/chemist.wikitext
@@ -2,9 +2,9 @@
 ===Pronunciation===
 kem'ĭst, /ˈkɛmɪst/, /'kEmIst/
 
+{{wikipedia}}
 ===Noun===
 '''chemist''' (''plural'' '''chemists''')
-
 #A person whose [[occupation]] [[specialize]]s in the [[science]] of [[chemistry]], especially at a [[professional]] level.
 #(''chiefly British'') A [[pharmacist]].
 #(''chiefly British'') A [[pharmacy]].
