/* Translations */ top/mid/bottom layout templates <chemistry#9052>

--- a/wiki/chemistry.wikitext
+++ b/wiki/chemistry.wikitext
@@ -28,23 +28,26 @@
 *[[chemical equations]]
 
 ====Translations====
-*[[Arabic]]: [[الكِيمْيَاء]] ''f''
+{{top}}
+*Arabic: [[الكِيمْيَاء]] ''f''
 *Bulgarian: [[химия]] ''f'' (1)
 *Catalan: [[química]] ''f'' [[:ca:química|(ca)]]
-*[[Chinese]]: [[化学]] (huàxué)
+*Chinese: [[化学]] (huàxué)
 *Czech: [[chemie]] ''f'' (1)
 *Danish: [[kemi]] ''f'' (1)
 *Dutch: [[chemie]] ''f'' (1, 2), [[scheikunde]] ''f'' (1)
 *Finnish: [[kemia]]
 *French: [[chimie]] ''f'' (1, 2)
+{{mid}}
 *German: [[Chemie]] ''f'' [[:de:Chemie|(de)]] 
 *Italian: [[chimica]] ''f''
 *Japanese: [[化学]] (かがく, kagaku)
-*[[Polish]]: [[chemia]] ''f'' (1)
+*Polish: [[chemia]] ''f'' (1)
 *Romanian: [[chimie]] ''f''
-*[[Slovak]]: [[chémia]] ''f'' (1)
+*Slovak: [[chémia]] ''f'' (1)
 *Spanish: [[química]] ''f''
 *Swedish: [[kemi]] ''c''
+{{bottom}}
 
 ====See also====
 *[[w:chemistry|Wikipedia article on chemistry]]
