/* Translations */ pt <chemistry#9052>

--- a/wiki/chemistry.wikitext
+++ b/wiki/chemistry.wikitext
@@ -43,6 +43,7 @@
 *Italian: [[chimica]] ''f''
 *Japanese: [[化学]] (かがく, kagaku)
 *Polish: [[chemia]] ''f'' (1)
+*Portuguese: [[química]] ''f''
 *Romanian: [[chimie]] ''f''
 *Slovak: [[chémia]] ''f'' (1)
 *Spanish: [[química]] ''f''
