/* Translations */ pt <vagina#50717>

--- a/wiki/vagina.wikitext
+++ b/wiki/vagina.wikitext
@@ -19,6 +19,7 @@ n. pl. vaginas or vaginae
 ====Translations====
 *Chinese: [[yin1dao4]]
 *German: [[Scheide]] ''f'' (1), [[Vagina]] ''f'' (1)
+*Portuguese: [[Vagina]] ''f'' (1)
 
 ====Derived Terms====
 *[[vaginal]]
