/* Verb */ wikipediapar, link "temper" <anneal#59952>

--- a/wiki/anneal.wikitext
+++ b/wiki/anneal.wikitext
@@ -1,7 +1,6 @@
 ==English==
 
+{{wikipediapar|Annealing}}
 ===Verb===
-
 '''to anneal'''
-
-#To subject to great heat, and then cool slowly for the purpose of rendering it less brittle; to temper; to toughen.
+#To subject to great heat, and then cool slowly for the purpose of rendering less [[brittle]]; to [[temper]]; to toughen.
