--- a/wiki/themself.wikitext
+++ b/wiki/themself.wikitext
@@ -1,3 +1,8 @@
 ==English==
 ===Pronoun===
 '''themself'''
+
+
+(non-standard) Reflexive and emphatic form of them when them is used a non-gender-specific singular pronoun. 
+Someone has hurt themself. 
+Anyone who wants a car like mine can buy one themself.
