/* Noun */ marked as nonce word. <veg*n#87104>

--- a/wiki/veg%2An.wikitext
+++ b/wiki/veg%2An.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''veg*n''' (''plural'' '''veg*ns''')
 
-#[[Vegetarian]] or [[vegan]]; a person who eats no animal flesh or who eats no animal products at all.
+#''(Nonce word):'' [[Vegetarian]] or [[vegan]]; a person who eats no animal flesh or who eats no animal products at all.
 
 ===Adjective===
 
