--- a/wiki/geekasm.wikitext
+++ b/wiki/geekasm.wikitext
@@ -1,13 +1,11 @@
 ==English==
 ===Etymology===
-([[neologism]]) ''[[geek]]'' + ''-asm'' from [[orgasm]]
+''([[neologism]]):'' [[geek]] + [[-asm]] from [[orgasm]]
 
 ===Noun===
 '''geekasm''' (Alternate spelling '''geekgasm''')
-# (''[[slang]]'') Any extremely pleasurable feeling one experiences after seeing, or hearing, something particularly cool within the realm of information technology, or related fields that require intimate knowledge of complex systems.
-
-==Reference== 
-When they build a machine, if they do the calculations right, the machine works and you get this intense ... uhh ... just like a '''geekasm''', from knowing that what you created in your mind and on the computer is actually doing what you told it to do - ''MIT professor Alex Slocum, Scientific American Frontiers, May 21st 2002''
+# (''[[slang]]):'' Any extremely pleasurable feeling one experiences after seeing, or hearing, something particularly cool within the realm of information technology, or related fields that require intimate knowledge of complex systems.
+#:When they build a machine, if they do the calculations right, the machine works and you get this intense ... uhh ... just like a '''geekasm''', from knowing that what you created in your mind and on the computer is actually doing what you told it to do - MIT professor Alex Slocum, ''Scientific American Frontiers'', May 21st 2002
 
 ===See Also===  
 *[[geek out]]
