increased picture size <boat#7377>

--- a/wiki/boat.wikitext
+++ b/wiki/boat.wikitext
@@ -1,4 +1,4 @@
-[[Image:ORŁ 0033 ubt.JPEG|thumb|right|Boat kept on land]]
+[[Image:ORŁ 0033 ubt.JPEG|thumb|right|350 px|Boat kept on land]]
 
 ==English==
 ===Pronunciation===
