enlarged, repositioned picture <blueberry#37995>

--- a/wiki/blueberry.wikitext
+++ b/wiki/blueberry.wikitext
@@ -1,6 +1,6 @@
-===Pronunciation===
+[[Image:Blueberries.jpg|thumb|right|350 px|Blueberries, definition 1]]
 
-[[Image:Blueberries.jpg|thumb|right|Blueberries, definition 1]]
+===Pronunciation===
 
 '''Blue*berr-y'''
 *[[AHD]]:
