--- a/wiki/admit.wikitext
+++ b/wiki/admit.wikitext
@@ -1,18 +1,19 @@
 ==English==
+
 ===Etymology===
-OE. [[amitten]], L. [[admittere]], [[admissum]]; ad + [[mittere]] to send: cf. F. [[admettre]], OF. [[admettre]], OF. [[ametre]]. See [[missile]].
+{{OE.}} ''[[amitten]]'', {{L.}} ''[[admittere]], [[admissum]]''; [[ad-]] + [[mittere]] to send.
 
 ===Pronunciation===
 *{{IPAlink}} [[WEAE]] {{IPA|/ædˈmɪt/}}
 *{{audio|en-us-admit.ogg|Audio pronunciation}}
 
 ===Transitive Verb===
-'''to admit'''
-# to suffer to enter; to grant entrance, whether into a place, or into the mind, or consideration; to receive; to take; as, they were into his house; to admit a serious  thought into the mind; to admit evidence in the trial of a cause.
-# to give a right of entrance; as, a ticket admits one into a playhouse.
-# to allow (one) to enter on an office or to enjoy a privilege; to recognize as qualified for a franchise; as, to admit an attorney to practice law; the prisoner was admitted to bail.
-# to concede as true; to acknowledge or assent to, as an allegation which it is impossible to deny; to own or confess; as, the argument or fact is admitted; he admitted his guilt.
-# to be capable of; to permit; as, the words do not admit such a construction. In this sense, of may be used after the verb, or may be omitted.
+{{en-infl-reg-consonant|admit||t}}
+# To suffer to enter; to grant entrance, whether into a place, or into the mind, or consideration; to receive; to take; as, they were into his house; to admit a serious  thought into the mind; to admit evidence in the trial of a cause.
+# To give a right of entrance; as, a ticket admits one into a playhouse.
+# To allow (one) to enter on an office or to enjoy a privilege; to recognize as qualified for a franchise; as, to admit an attorney to practice law; the prisoner was admitted to bail.
+# To concede as true; to acknowledge or assent to, as an allegation which it is impossible to deny; to own or confess; as, the argument or fact is admitted; he admitted his guilt.
+# To be capable of; to permit; as, the words do not admit such a construction. In this sense, of may be used after the verb, or may be omitted.
 
 ===Translations===
 *Korean: [[인정하다]]
