+en heteronym cat <moped#76533>

--- a/wiki/moped.wikitext
+++ b/wiki/moped.wikitext
@@ -26,6 +26,7 @@ From Swedish: a combination of the words [[motor]] and [[velociped]], where [[ve
 ====Translations====
 *Swedish: [[moped#Swedish|moped]]
 
+[[Category:English heteronyms]]
 [[Category:English words with multiple etymologies]]
 
 ----
