+en heteronym cat <sewer#69658>

--- a/wiki/sewer.wikitext
+++ b/wiki/sewer.wikitext
@@ -16,4 +16,5 @@ sewing person:
 
 *Dutch: [[naaister]] ''f'', [[naaier]] ''m''
 
+[[Category:English heteronyms]]
 [[Category:English words with multiple etymologies]]
