--- a/wiki/grandkid.wikitext
+++ b/wiki/grandkid.wikitext
@@ -1,5 +1,6 @@
 ==English==
+
 ===Noun===
-'''grandkid''', ''plural'': '''grandkids'''
+'''grandkid'''  (''plural:'' '''[[grandkids]]''')
 #(''countable'') (''informal'') the [[child]] of one's child
-#:''They loves spending time with all six of their '''grandkids''', and they carry the photos to prove it.''
+#:''They love spending time with all six of their '''grandkids''', and they carry the photos to prove it.''
