+English, +{infl} <debug#99402>

--- a/wiki/debug.wikitext
+++ b/wiki/debug.wikitext
@@ -1,7 +1,9 @@
-=== Verb ===
-'''to debug'''
-#to analyze or diagnose a problem to the point of determining a solution.
+==English==
 
-==== Synonyms ====
+===Verb===
+{{en-infl-reg-consonant|debug||g}}
+# To analyze or diagnose a problem to the point of determining a solution.
+
+====Synonyms====
 *[[diagnose]]
 *[[troubleshoot]]
