+English, reordered as per ELE, +{infl} <pluck#69775>

--- a/wiki/pluck.wikitext
+++ b/wiki/pluck.wikitext
@@ -1,15 +1,19 @@
-===Transitive verb===
-#to [[pull]] something [[sharp]]ly; to pull something out
-#:''She '''plucked''' the phone from her bag and phoned her friend.''
-#{{music}}: To gently play a single [[string]], e.g. on a [[guitar]], [[violin]], etc. 
-#:''Whereas a [[piano]] stikes the string, a [[harpsichord]] '''plucks''' it.''
-#To [[remove]] [[feather]]s from a [[bird]]
+==English==
 
 ===Noun===
-#(uncountable) [[nerve]], [[fortitude]], or [[persistence]]
+'''pluck'''  {{uncountable}}
+# [[nerve]], [[fortitude]], or [[persistence]]
 #:''He didn't get far with the attempt, but you have to admire his '''pluck'''.''
 
-====Translations====
+===Transitive verb===
+{{en-infl-reg-consonant|pluck||}}
+# to [[pull]] something [[sharp]]ly; to pull something out
+#:''She '''plucked''' the phone from her bag and phoned her friend.''
+# {{music}}: To gently play a single [[string]], e.g. on a [[guitar]], [[violin]], etc. 
+#:''Whereas a [[piano]] stikes the string, a [[harpsichord]] '''plucks''' it.''
+# To [[remove]] [[feather]]s from a [[bird]].
+
+===Translations===
 {{checktrans}}
 *French: [[pincer]]
 *Slovensko: [[ubirati]] (glasba/music), [[skubsti]]
