-ad spam <vibrator#75714>

--- a/wiki/vibrator.wikitext
+++ b/wiki/vibrator.wikitext
@@ -3,7 +3,7 @@
 '''vibrator'''
 {{wikipedia}}
 #A [[device]] that [[vibrate]]s or causes [[vibration]]
-#A [[vibrating]] device used for [[massage]] or [[sexual]] [[stimulation]] (read [http://www.breakthrough-boutique.com more]).
+#A [[vibrating]] device used for [[massage]] or [[sexual]] [[stimulation]]
 #A device designed to [[electromechanically]] [[interupt]] [[current]] flowing to the step up [[transformer]] which was used to [[generate]] the [[high tension]] [[positive]] [[supply]] in old [[battery]] operated (automotive) [[valve]] [[radio]]s.
 
 ===Translations===
