--- a/wiki/sex.wikitext
+++ b/wiki/sex.wikitext
@@ -168,6 +168,7 @@ translations with definitions is unreliable.
 *Spanish: [[sexar]]
 
 ===Derived terms===
+*[[sex toy]]
 *[[battle of the sexes]]
 *[[desex]]
 *[[sexiness]]
