--- a/wiki/sex_toy.wikitext
+++ b/wiki/sex_toy.wikitext
@@ -1,3 +1,3 @@
 The term ''Sex (or Adult) Toy'' is used to describe any object or device which is mainly used to facilitate sexual pleasure. Sex Toys are made by various synthetic material like rubber or silicone. A related term is ''Marital Aid'', often used as a euphemism for Sex Toys. 
 
-Read more about [http://www.breakthrough-boutique.com Adult Toys].
+{{rfc}}
