--- a/wiki/Palestinian.wikitext
+++ b/wiki/Palestinian.wikitext
@@ -8,7 +8,7 @@
 *[[Spanish]]: [[Palestino]] ''m'', [[Palestina]] ''f''
 
 ===Adjective===
-#Of, from, or pertaining to Palestine, the Palestinian people or the Palestinian language.
+#Of, from, or pertaining to Palestine, or the Palestinian people.  Note: Prior to 1948, "Palestinian" often referred to Jewish institutions in the British Mandate of Palestine.  For example, today's English-language Israeli newspaper The Jerusalem Post was called The Palestine Post before 1948; also the Palestinian Orchestra was a Jewish orchestra.  Today, "Palestinian" refers almost exclusively to Arabs who claim part of the land now controlled by Israel as a homeland.  
 
 ====Translations====
 *[[Finnish]]: [[palestiinalainen]]
