Reverted edit of 69.173.117.186, changed back to last version by 70.81.134.196 <themself#55649>

--- a/wiki/themself.wikitext
+++ b/wiki/themself.wikitext
@@ -3,6 +3,7 @@
 '''themself'''
 
 
-(non-standard) Reflexive and emphatic form of them when them is used a non-gender-specific singular pronoun. 
-Someone has hurt themself. 
-Anyone who wants a car like mine can buy one themself.
+====Synonyms====
+*[[himself]], [[themselves]]
+
+[[Category:English third person pronouns]]
